--- a/ui/package.json
+++ b/ui/package.json
@@ -8,13 +8,18 @@
     "dev": "vite --host 0.0.0.0",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "eslint": "eslint 'src/**/*.{ts,tsx}'"
+  },
+  "engines": {
+    "node": ">= 18.x"
   },
   "dependencies": {
     "@chakra-ui/react": "2.5.1",
     "@chakra-ui/theme-tools": "2.0.16",
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
+    "@koupr/ui": "1.0.1",
     "@reduxjs/toolkit": "1.9.2",
     "formik": "2.2.9",
     "framer-motion": "9.0.4",
@@ -38,7 +43,7 @@
     "@vue/compiler-sfc": "3.2.47",
     "concurrently": "7.6.0",
     "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
+    "eslint-config-react-app": "7.0.1",
     "prettier": "2.8.3",
     "typescript": "4.9.5",
     "vite": "4.1.2",
