--- a/ui/package.json
+++ b/ui/package.json
@@ -39,10 +39,13 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.11",
     "@types/react-syntax-highlighter": "15.5.6",
+    "@typescript-eslint/eslint-plugin": "5.54.0",
+    "@typescript-eslint/parser": "5.54.0",
     "@vitejs/plugin-react": "3.1.0",
     "@vue/compiler-sfc": "3.2.47",
     "concurrently": "7.6.0",
     "eslint": "8.33.0",
+    "eslint-config-prettier": "8.6.0",
     "eslint-config-react-app": "7.0.1",
     "prettier": "2.8.3",
     "typescript": "4.9.5",
