--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,31 +33,27 @@ services:
     ports:
       - 9090:8080
   api:
-    image: gradle:jdk17
-    working_dir: /app
-    command: sh -c "./gradlew bootRun"
+    image: rolldebee/api
+    build:
+      context: ./api
+    depends_on:
+      - db
+    ports:
+      - "8080:8080"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/rolldebee
       - SPRING_DATASOURCE_USERNAME=rolldebee
       - SPRING_DATASOURCE_PASSWORD=rolldebee
       - ORACLE_HOST=oracle
-    ports:
-      - "8080:8080"
-    volumes:
-      - ./api:/app
-    depends_on:
-      - db
-      - oracle
+    restart: on-failure
   ui:
-    image: node:18-alpine
-    working_dir: /app
-    command: sh -c "npm i && npm run dev"
-    environment:
-      - VITE_API_URL=http://127.0.0.1:8080
-    ports:
-      - "5173:5173"
-    volumes:
-      - ./ui:/app
-      - /app/node_modules
+    image: rolldebee/ui
+    build:
+      context: ./ui
     depends_on:
       - api
+    ports:
+      - "5173:5173"
+    environment:
+      - VITE_API_URL=http://127.0.0.1:8080
+    restart: on-failure
