--- a/ui/package.json
+++ b/ui/package.json
@@ -1,25 +1,23 @@
 {
   "name": "rolldebee-ui",
   "version": "1.0.0",
-  "license": "MIT",
-  "private": true,
+  "license": "BUSL-1.1",
   "type": "module",
+  "private": true,
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "tsc && vite build",
+    "tsc": "tsc",
     "preview": "vite preview",
-    "prettier": "prettier --write .",
-    "eslint": "eslint 'src/**/*.{ts,tsx}'"
-  },
-  "engines": {
-    "node": ">= 18.x"
+    "format": "prettier --write .",
+    "lint": "eslint"
   },
   "dependencies": {
-    "@chakra-ui/react": "2.5.1",
-    "@chakra-ui/theme-tools": "2.0.16",
-    "@emotion/react": "11.10.6",
-    "@emotion/styled": "11.10.6",
-    "@koupr/ui": "1.0.1",
+    "@chakra-ui/react": "2.8.2",
+    "@chakra-ui/theme-tools": "2.1.2",
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
+    "@koupr/ui": "1.9.0",
     "@reduxjs/toolkit": "1.9.2",
     "formik": "2.2.9",
     "framer-motion": "9.0.4",
@@ -34,23 +32,23 @@
     "yup": "1.0.0"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "4.0.0",
+    "@trivago/prettier-plugin-sort-imports": "4.3.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.11",
     "@types/react-syntax-highlighter": "15.5.6",
-    "@typescript-eslint/eslint-plugin": "5.54.0",
-    "@typescript-eslint/parser": "5.54.0",
-    "@vitejs/plugin-react": "3.1.0",
-    "@vue/compiler-sfc": "3.2.47",
+    "@vitejs/plugin-react": "4.2.1",
     "concurrently": "7.6.0",
-    "eslint": "8.33.0",
-    "eslint-config-prettier": "8.6.0",
-    "eslint-config-react-app": "7.0.1",
-    "prettier": "2.8.3",
-    "typescript": "4.9.5",
-    "vite": "4.1.2",
-    "vite-plugin-svgr": "2.4.0",
-    "vite-tsconfig-paths": "4.0.5"
+    "eslint": "9.3.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-react": "7.34.1",
+    "globals": "15.3.0",
+    "prettier": "3.2.5",
+    "typescript": "5.4.5",
+    "typescript-eslint": "7.9.0",
+    "vite": "5.4.6",
+    "vite-plugin-svgr": "4.2.0",
+    "vite-tsconfig-paths": "4.3.2"
   }
 }
