--- a/ui/package.json
+++ b/ui/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "11.11.5",
     "@koupr/ui": "1.9.0",
     "@reduxjs/toolkit": "1.9.2",
+    "classnames": "2.5.1",
     "formik": "2.2.9",
     "framer-motion": "9.0.4",
     "react": "18.2.0",
