--- a/.github/workflows/check-on-pr-api.yml
+++ b/.github/workflows/check-on-pr-api.yml
@@ -13,13 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: |
-          curl -sSLO https://github.com/pinterest/ktlint/releases/download/1.4.0/ktlint && chmod a+x ktlint && sudo mv ktlint /usr/local/bin/
-      - name: run ktlint
-        run: |
-          ktlint --reporter=checkstyle,output=build/ktlint-report.xml
-        continue-on-error: true
-      - uses: yutailang0119/action-ktlint@v4
+      - uses: musichin/ktlint-check@v3
         with:
-          report-path: build/*.xml
-        continue-on-error: false
+            ktlint-version: '1.4.0'
