--- a/.github/workflows/check-on-pr-api.yml
+++ b/.github/workflows/check-on-pr-api.yml
@@ -9,10 +9,14 @@ on:
       - "!api/README.md"
 
 jobs:
-  ktlint:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: musichin/ktlint-check@v3
         with:
-            ktlint-version: '1.4.0'
+          ktlint-version: '1.4.0'
+    permissions:
+      contents: read
+      pull-requests: read
+      checks: write
