--- a/.github/workflows/check-on-pr-api.yml
+++ b/.github/workflows/check-on-pr-api.yml
@@ -18,7 +18,7 @@ jobs:
           curl -sSLO https://github.com/pinterest/ktlint/releases/download/1.4.0/ktlint && chmod a+x ktlint && sudo mv ktlint /usr/local/bin/
       - name: run ktlint
         run: |
-          ktlint --reporter=checkstyle,output=build/ktlint-report.xml 'api/**/*.kt
+          ktlint --reporter=checkstyle,output=build/ktlint-report.xml "api/**/*.kt"
         continue-on-error: true
       - uses: yutailang0119/action-ktlint@v4
         with:
