--- a/.github/workflows/check-on-pr-api.yml
+++ b/.github/workflows/check-on-pr-api.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           curl -sSLO https://github.com/pinterest/ktlint/releases/download/1.4.0/ktlint && chmod a+x ktlint && sudo mv ktlint /usr/local/bin/
-      - name: run ktlint
+      - name: Lint using ktlint
         run: |
           ktlint --reporter=checkstyle,output=build/ktlint-report.xml "api/**/*.kt"
         continue-on-error: true
